fix: Updating go.mod
