# openapi/spec.yaml
@@ -19,7 +19,7 @@ servers:
 paths:
     "/forms/contact":
         "post":
-            description: Posts a new form submission fror to contact page.
+            description: Posts a new form submission from to contact page.
             operationId: SendContactForm
             requestBody:
                 description: The User to create, all fields are required to pass validation.
@@ -33,18 +33,13 @@ paths:
                     content:
                         application/json:
                             schema:
-                                allOf:
-                                    -   $ref: '#/components/schemas/HTTPResponse'
-                                    -   properties:
-                                            data:
-                                                $ref: '#/components/schemas/ContactFormResponse'
-                401:
-                    description:  Not Authorised
+                                $ref: '#/components/schemas/HTTPResponse'
+                default:
+                    description: Unexpected error
                     content:
                         application/json:
                             schema:
-                                allOf:
-                                    -   $ref: '#/components/schemas/HTTPResponse'
+                                $ref: '#/components/schemas/HTTPError'
 components:
     securitySchemes:
         ApiKeyAuth:
@@ -53,17 +48,19 @@ components:
             name: X-API-Key
     schemas:
         HTTPResponse:
+            type: object
             properties:
                 data:
-                    type: object
-                error:
-                    type: boolean
+                    AnyValue: {}
                 message:
                     example: User formatted message from the API
                     type: string
-                status:
-                    type: integer
+            required:
+                - data
+                - error
+                - message
         HTTPError:
+            type: object
             properties:
                 code:
                     example: error_code
@@ -74,12 +71,13 @@ components:
                 operation:
                     example: Function.Method
                     type: string
-            type: object
+            required:
+                - code
+                - error
+                - operation
         ContactFormRequest:
             type: object
-            description: Message and attributes from the contact form
-            required:
-                - message
+            description: Message and attributes from the contact form.
             properties:
                 message:
                     type: string
@@ -87,8 +85,11 @@ components:
                 honeypot:
                     type: string
                     description: The message from the user.
+            required:
+                - message
+                - honeypot
         ContactFormResponse:
             type: string
-            description: The message sent back to the user upon successful submission
+            description: The message sent back to the user upon successful submission.
 security:
     -   ApiKeyAuth: [ ]
